--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@capacitor/keyboard": "1.2.2",
     "@capacitor/status-bar": "1.0.8",
     "@ionic/angular": "^6.0.0",
+    "leaflet": "^1.7.1",
+    "leaflet-ant-path": "^1.3.0",
+    "leaflet.vectorgrid": "^1.3.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
