--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ionic/pwa-elements": "^3.1.1",
     "leaflet": "^1.7.1",
     "leaflet-ant-path": "^1.3.0",
+    "leaflet-geosearch": "^3.6.0",
     "leaflet.vectorgrid": "^1.3.0",
     "ol": "^6.14.1",
     "rxjs": "~6.6.0",
