Paypal Payment added

--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -2,5 +2,8 @@
 	"appId": "com.leaflet.example",
 	"appName": "leafletmap",
 	"webDir": "www",
-	"bundledWebRuntime": false
+	"bundledWebRuntime": false,
+	"server": {
+		"url": "http://192.168.1.157:8100"
+	}
 }
