--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~13.2.2",
     "@angular/router": "~13.2.2",
     "@angular/service-worker": "~13.2.2",
+    "@awesome-cordova-plugins/in-app-browser": "^5.41.0",
     "@capacitor/android": "^3.4.3",
     "@capacitor/app": "1.1.1",
     "@capacitor/core": "3.4.3",
@@ -30,6 +31,7 @@
     "@capacitor/storage": "^1.2.5",
     "@ionic/angular": "^6.0.0",
     "@ionic/pwa-elements": "^3.1.1",
+    "cordova-plugin-inappbrowser": "^5.0.0",
     "leaflet": "^1.7.1",
     "leaflet-ant-path": "^1.3.0",
     "leaflet-geosearch": "^3.6.0",
