--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "leaflet-ant-path": "^1.3.0",
     "leaflet-geosearch": "^3.6.0",
     "leaflet.vectorgrid": "^1.3.0",
+    "ngx-quill": "^16.2.0",
     "ol": "^6.14.1",
+    "quill": "^1.3.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
@@ -57,6 +59,7 @@
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
+    "@types/quill": "^1.3.10",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
     "eslint": "^7.6.0",
