--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cordova-plugin-inappbrowser": "^5.0.0",
     "leaflet": "^1.7.1",
     "leaflet-ant-path": "^1.3.0",
+    "leaflet-drift-marker": "^2.0.0",
     "leaflet-geosearch": "^3.6.0",
     "leaflet.vectorgrid": "^1.3.0",
     "ngx-quill": "^16.2.0",
