--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -15,7 +15,7 @@ dependencies {
     implementation project(':capacitor-keyboard')
     implementation project(':capacitor-status-bar')
     implementation project(':capacitor-storage')
-
+    implementation "com.google.android.gms:play-services-location:16.+"
 }
 
 
