--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~13.2.2",
     "@angular/service-worker": "~13.2.2",
     "@awesome-cordova-plugins/in-app-browser": "^5.41.0",
+    "@awesome-cordova-plugins/location-accuracy": "^5.41.0",
     "@capacitor/android": "^3.4.3",
     "@capacitor/app": "1.1.1",
     "@capacitor/core": "3.4.3",
@@ -32,6 +33,7 @@
     "@ionic/angular": "^6.0.0",
     "@ionic/pwa-elements": "^3.1.1",
     "cordova-plugin-inappbrowser": "^5.0.0",
+    "cordova-plugin-request-location-accuracy": "^2.3.0",
     "leaflet": "^1.7.1",
     "leaflet-ant-path": "^1.3.0",
     "leaflet-drift-marker": "^2.0.0",
