--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "leaflet-geosearch": "^3.6.0",
     "leaflet.vectorgrid": "^1.3.0",
     "ngx-quill": "^16.2.0",
+    "ngx-socket-io": "^4.2.0",
     "ol": "^6.14.1",
     "quill": "^1.3.7",
     "rxjs": "~6.6.0",
