--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "@angular/service-worker": "~13.2.2",
     "@awesome-cordova-plugins/in-app-browser": "^5.41.0",
     "@awesome-cordova-plugins/location-accuracy": "^5.41.0",
-    "@capacitor/android": "^3.4.3",
+    "@capacitor/android": "^3.5.1",
     "@capacitor/app": "1.1.1",
-    "@capacitor/core": "3.4.3",
+    "@capacitor/core": "^3.5.1",
     "@capacitor/geolocation": "^1.3.1",
     "@capacitor/haptics": "1.1.4",
+    "@capacitor/ios": "^3.5.1",
     "@capacitor/keyboard": "1.2.2",
     "@capacitor/status-bar": "1.0.8",
     "@capacitor/storage": "^1.2.5",
