--- a/package.json
+++ b/package.json
@@ -20,17 +20,18 @@
     "@angular/platform-browser-dynamic": "~13.2.2",
     "@angular/router": "~13.2.2",
     "@angular/service-worker": "~13.2.2",
+    "@awesome-cordova-plugins/core": "6.2.0",
     "@awesome-cordova-plugins/in-app-browser": "^5.41.0",
     "@awesome-cordova-plugins/location-accuracy": "^5.41.0",
-    "@capacitor/android": "^3.5.1",
-    "@capacitor/app": "1.1.1",
-    "@capacitor/core": "^3.5.1",
-    "@capacitor/geolocation": "^1.3.1",
-    "@capacitor/haptics": "1.1.4",
-    "@capacitor/ios": "^3.5.1",
-    "@capacitor/keyboard": "1.2.2",
-    "@capacitor/status-bar": "1.0.8",
-    "@capacitor/storage": "^1.2.5",
+    "@capacitor/android": "4.6.0",
+    "@capacitor/app": "4.1.1",
+    "@capacitor/core": "4.6.0",
+    "@capacitor/geolocation": "4.1.0",
+    "@capacitor/haptics": "4.1.0",
+    "@capacitor/ios": "4.6.0",
+    "@capacitor/keyboard": "4.1.0",
+    "@capacitor/preferences": "^4.0.2",
+    "@capacitor/status-bar": "4.1.1",
     "@ionic/angular": "^6.0.0",
     "@ionic/pwa-elements": "^3.1.1",
     "cordova-plugin-inappbrowser": "^5.0.0",
@@ -58,7 +59,7 @@
     "@angular/compiler": "~13.2.2",
     "@angular/compiler-cli": "~13.2.2",
     "@angular/language-service": "~13.2.2",
-    "@capacitor/cli": "3.4.3",
+    "@capacitor/cli": "4.6.0",
     "@ionic/angular-toolkit": "^6.0.0",
     "@ionic/lab": "3.2.11",
     "@types/jasmine": "~3.6.0",
